<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.michel.mynews.Fragments.BoxFragment">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/checkbox_art"
            android:text="@string/arts"
            android:layout_marginTop="@dimen/margin_top_box"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_business"
            android:text="@string/business"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_entrepreneurs"
            android:text="@string/entrepreneurs"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/checkbox_politics"
            android:text="@string/politics"
            android:layout_marginTop="@dimen/margin_top_box"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_sport"
            android:text="@string/sport"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkbox_travel"
            android:text="@string/travel"
            android:layout_marginLeft="@dimen/margin_left_box"
            android:theme="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
